# krisha

./: .env.local  .env.prod  .env.prod.example  .env.test  .env.test.example  README.md  config.py  pyproject.toml  pytest.ini
krisha_kz/data/: data_user.py
krisha_kz/model/: main_menu.py  main_page.py  search_page.py
krisha_kz/users/: user.py
krisha_kz/utils/: path.py  path_env.py
krisha_kz_tests/data/: data_user.py
krisha_kz_tests/pages/: main_page.py  search_page.py
krisha_kz_tests/utils/: path.py
tests/: conftest.py  test_link.py  test_search.py
tests/ui/: conftest.py  search.py  test_search.py
