[tool.poetry]
name = "krisha"
version = "0.1.0"
description = ""
authors = ["Irina Kirillova <{ID}+{username}@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
selene = "^2.0.0rc4"
allure-pytest = "^2.12.0"
python-dotenv = "^0.21.0"
pydantic = "1.10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
